@@ -5,7 +5,8 @@ Changelog
 1.0.0a4 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- Fix image display with for form image widget.
+  [mathias.leimgruber]
 
 
 1.0.0a3 (2015-12-08)
